distribution/kustomize/base/ext-auth/istio/authpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-auth-kubeflow
spec:
  selector:
    matchLabels:
      istio: ingressgateway
      app: istio-ingressgateway
  action: CUSTOM
  provider:
    name: ext-auth-proxy
  rules:
    - {}
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: ext-auth-kubeflow
#   namespace: istio-system
# spec:
#   selector:
#     matchLabels:
#       istio: ingressgateway
#       app: istio-ingressgateway
#   action: CUSTOM
#   provider:
#     name: oidc-authservice-ext-auth
#   rules:
#     - to:
#         - operation:
#             hosts:
#               - kubeflow.k8s.tidu.giize.com
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: ext-auth-kubeflow-api-http
#   namespace: istio-system
# spec:
#   selector:
#     matchLabels:
#       istio: ingressgateway
#       app: istio-ingressgateway
#   action: CUSTOM
#   provider:
#     name: kubeflow-api-ext-auth-http
#   rules:
#     - {}
    # - to:
    #     - operation:
    #         hosts:
    #           - kubeflow-api.k8s.tidu.giize.com
    #           # - '*.knative.k8s.tidu.giize.com'
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: ext-auth-knative
#   namespace: istio-system
# spec:
#   selector:
#     matchLabels:
#       istio: ingressgateway
#       app: istio-ingressgateway
#   action: ALLOW
#   rules:
#     - to:
#         - operation:
#             hosts:
#               - '*.knative.k8s.tidu.giize.com'
